[tool.poetry]
name = "payment-exercise"
version = "0.1.0"
description = "A simple Python exercise to define an invoice payment problem"
authors = ["Alejandro Otero <lexotero@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "payment_exercise"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
